# dupdate

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  version.sh
examples/: run  run.sh
src/: .gitignore  Makefile.am  Makefile.in  common.c  common.h  daemon.c  daemon.h  dboot.c  dboot.h  dboot_list.c  dboot_mtd.c  dboot_nvram.c  dupdate-inotifyd-agent  dupdate.c  dupdate.h  dupdate.sh  dupdate_args.c  dupdate_daemon.c  inotifyd.c  inotifyd.sh  simple_cmp.c
